# ai4org

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  data_pipeline_enhanced.py  datapipeline_enhanced_qa5.py  inference_log.txt  main.py  pyproject.toml  requirements.txt  run.py
config/: default_config.yaml
configs/: train_config.yaml
data/: corpus.py  json.py
data_cleaning_pipeline/: data_pipeline_enhanced.py  data_structures.py  dataset_corpus_generation.py  loader.py  main.py
data_generation_pipeline/: README.md  chunking.py  config.py  data_pipeline_enhanced.py  generation.py  loaders.py  main.py  model_utils.py  prompt.py  requirements.txt
data_generation_pipeline/data-pipeline/: .gitignore  README.md  pyproject.toml  requirements.txt
data_generation_pipeline/data-pipeline/config/: model_config.yaml  pipeline_config.yaml
data_generation_pipeline/data-pipeline/docs/: architecture.md
data_generation_pipeline/data-pipeline/notebooks/: experiments.ipynb
data_generation_pipeline/data-pipeline/src/: chunker.py  cleaner.py  cli.py  config_reader.py  dedupe.py  document_reader.py  evidence.py  file_loader.py  generator.py  model_loader.py  pipeline_runner.py  prompts.py  qa_parser.py  validators.py
data_generation_pipeline/data-pipeline/tests/: test_chunker.py  test_cleaner.py  test_parser.py
docs/: api_reference.md  architecture.md  data_generation_pipeline.md  frontend.md  hallucination_reduction.md
frontend/: CNAME  README.md  app.py  main.py  new-QA.py  user_history.json  x.py
hallucination_reduction/: config.py  data_utils.py  discriminator.py  discriminator_training_utils.py  evaluation.py  generator.py  inference.py  main.py  retriever.py  rl_utils.py
main/: requirements.txt
src/: model.py  (+3 more)
(+63 files in other folders)
